tests/e2e/pass/m30_str_cat.ep
# EXIT: 0
# STDOUT: hello world
fun main(): void {
    let a = "hello"
    let b = " "
    let c = "world"
    let joined = a + b + c
    assert(joined == "hello world")
    assert(a == "hello")
    assert(("" + "x") == "x")
    assert(("x" + "") == "x")
    println(joined)
    exit(0)
}
