tests/e2e/fail/is_null_integer.ep
# COMPILE_ERROR: is_null expects a reference, got i64
fun main(): void {
    let result = is_null(0)
}
